[package]
name = "monitor-control"
description = "The fastest way to get / set DDC values for a monitor"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = "thin"
#debug = true
codegen-units = 1
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ddc = "0.2.2"
ddc-i2c = { version = "0.2.2", features = ["i2c-linux"] }
eyre = "0.6.12"
